add link to create new report in layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <% if user_signed_in? %>
     <ul>
+      <li><%= link_to "Create report", new_report_path %> </li>
       <li><%= link_to "Account", edit_user_registration_path %> </li>
       <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %> </li>
 
