add paperclip gem to see pic in reports and index

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -16,6 +16,7 @@
 
     <% @reports.each do |report| %>
       <tr>
+        <td><%= image_tag report.image.url(:thumb) %></td>
         <td><%= report.first_name %></td>
         <td><%= report.last_name %></td>
         <td><%= report.summary %></td>
