--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= image_tag @report.image.url(:medium) %>
+
 <p>
   <strong>First name:</strong>
   <%= @report.first_name %>
