--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RapidReport</title>
+  <title>Rapid Report</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+	<header class="navbar navbar-default" role="navigation">
+    <div class="navbar-inner">
+      <div class="container">
+        <div id="logo" class="navbar-brand"><%= link_to "Rapid Report", root_path %></div>
+        <nav class="collapse navbar-collapse navbar-ex1-collapse">
+        	<% if user_signed_in? -%>
+						<ul class="nav navbar-nav navbar-right">
+							<li><%= link_to 'New Report', new_report_path %></li>
+							<li><%= link_to 'Account', edit_user_registration_path %></li>
+							<li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+						</ul>
+					<% else -%>
+						<ul class="nav navbar-nav pull-right">
+							<li><%= link_to 'Sign up', new_user_registration_path %></li>
+							<li><%= link_to 'Sign in', new_user_session_path %></li>
+						</ul>
+					<% end -%>
+        </nav>
+      </div>
+    </div>
+  </header>
 
-  <% if user_signed_in? %>
-    <ul>
-      <li><%= link_to "Create report", new_report_path %> </li>
-      <li><%= link_to "Account", edit_user_registration_path %> </li>
-      <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %> </li>
+	<div id="main_content" class="container">
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert alert-info") %>
+		<% end %>
 
-    </ul>
-  <% else %>
-    <ul>
-      <li><%= link_to "Sign up", new_user_registration_path %></li>
-      <li><%= link_to "Sign in", new_user_session_path %></li>
-    </ul>
-  <% end %>
-
-<%= yield %>
-
+			<div id="content" class="col-md-9 center-block">
+				<%= yield %>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
