--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,18 +13,45 @@
  *= require_tree .
  *= require_self
  */
- $navbar-default-bg: #a3a3c2;
-
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
-#logo {
-  float: left;
-  font-family:'Courgette', cursive;
-  font-size: 2em;
-  color: #ffe6e6;
-  letter-spacing: -1px;
-  font-weight: bold;
-  text-align: center;
-  padding-top: 5px;
-}
+ #logo {
+ 	font-size: 26px;
+ 	font-weight: 700;
+ 	text-transform: uppercase;
+ 	letter-spacing: -1px;
+ 	padding: 15px 0;
+ 	a {
+ 		color: #2F363E;
+ 	}
+ }
+
+ #main_content {
+ 	#content {
+ 		float: none;
+ 	}
+ 	padding-bottom: 100px;
+ 	.link {
+ 		padding: 2em 1em;
+ 		border-bottom: 1px solid #e9e9e9;
+ 		.title {
+
+ 			a {
+ 				color: #FF4500;
+ 			}
+ 		}
+ 	}
+ 	.comments_title {
+ 		margin-top: 2em;
+ 	}
+ 	#comments {
+ 		.comment {
+ 			padding: 1em 0;
+ 			border-top: 1px solid #E9E9E9;
+ 			.lead {
+ 				margin-bottom: 0;
+ 			}
+ 		}
+ 	}
+ }
