--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
         <nav class="collapse navbar-collapse navbar-ex1-collapse">
         	<% if user_signed_in? -%>
 						<ul class="nav navbar-nav navbar-right">
-							<li><%= link_to 'New Report', new_report_path %></li>
+							<li><%= link_to 'Home', root_path %></li>
+              <li><%= link_to 'New Report', new_report_path %></li>
 							<li><%= link_to 'Account', edit_user_registration_path %></li>
 							<li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
 						</ul>
