timestamp appears in index but not in individual report

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -3,13 +3,8 @@
 <%= image_tag @report.image.url(:medium) %>
 
 <p>
-  <strong>First name:</strong>
-  <%= @report.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @report.last_name %>
+  <strong>Full Name:</strong>
+  <%= @report.first_name + " " + @report.last_name %>
 </p>
 
 <p>
