--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -2,15 +2,22 @@
 
 <%= image_tag @report.image.url(:medium) %>
 
-<p>
-  <strong>Full Name:</strong>
-  <%= @report.first_name + " " + @report.last_name %>
-</p>
+<div>
+  <p>
+    <strong>Full Name:</strong>
+    <%= @report.first_name + " " + @report.last_name %>
+  </p>
+</div>
 
-<p>
-  <strong>Summary:</strong>
-  <%= @report.summary %>
-</p>
+<div>
+  <p>
+    <strong>Summary:</strong>
+    <%= @report.summary %>
+  </p>
+</div>
+
+<div>
+<small>Submitted by <%= @report.user_id %></small></div>
 
 <%= link_to 'Edit', edit_report_path(@report) %> |
 <%= link_to 'Back', reports_path %>
