add timestamp and user_id to show and index pages

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -16,8 +16,9 @@
   </p>
 </div>
 
-<div>
-<small>Submitted by <%= @report.user_id %></small></div>
+<div id="reports">
+  <%= render :partial => @report%>
+</div>
 
 <%= link_to 'Edit', edit_report_path(@report) %> |
 <%= link_to 'Back', reports_path %>
