--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,12 @@
       <div class="container">
         <div id="logo"><%= link_to "Rapid Report", root_path %></div>
 
-        <ul>
-          <nav class="nav navbar-nav navbar-right">
+          <nav class="nav navbar-nav navbar-right pull-right">
           	<% if user_signed_in? %>
-  						<li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <li class="click-profile-pic"><%= image_tag avatar_url(current_user), class:"img-circle" %></li>
+
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><%= link_to 'Home', root_path %></li>
                     <li><%= link_to 'New Report', new_report_path %></li>
@@ -26,13 +27,15 @@
                     <li role="separator" class="divider"></li>
                     <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
                   </ul>
-                </li>
+              </li>
+
   					<% else %>
   						<ul class="nav navbar-nav pull-right">
   							<li><%= link_to 'Sign up', new_user_registration_path %></li>
   							<li><%= link_to 'Sign in', new_user_session_path %></li>
   						</ul>
   					<% end %>
+            </ul>
         </ul>
           </nav>
       </div>
