--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,8 @@
                   <ul class="dropdown-menu">
                     <li><%= link_to 'Home', root_path %></li>
                     <li><%= link_to 'New Report', new_report_path %></li>
-                    <li><%= link_to 'Account', edit_user_registration_path %></li>
+                    <li><%= link_to 'My Account', edit_user_registration_path %></li>
+                    <li><a href= "https://th.gravatar.com/">Change Your Pic</li>
                     <li role="separator" class="divider"></li>
                     <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
                   </ul>
