--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,3 +31,17 @@ $navbar-default-bg: grey;
       color: pink;
     }
   }
+
+/*Index pics*/
+
+body {
+    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+}
+
+.portfolio-item {
+  margin-bottom: 25px;
+}
+
+footer {
+    margin: 50px 0;
+}
