--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
           <nav class="nav navbar-nav navbar-right pull-right">
           	<% if user_signed_in? %>
-            <li class="click-profile-pic"><%= image_tag avatar_url(current_user), class:"img-circle" %></li>
+            <li class="profile-pic"><%= image_tag avatar_url(current_user), class:"img-circle" %></li>
 
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
