--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,30 +1,118 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <p id="notice"><%= notice %></p>
 
-<h1>Reports</h1>
+<head>
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Summary</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-  <tbody>
+  <title>3 Col Portfolio - Start Bootstrap Template</title>
 
-    <% @reports.each do |report| %>
-      <tr>
-        <td><%= image_tag report.image.url(:thumb) %></td>
-        <td><%= report.first_name %></td>
-        <td><%= report.last_name %></td>
-        <td><%= report.summary %></td>
-        <td> Submitted <%= time_ago_in_words(report.updated_at) %> ago by <%= report.user_id %> </td>
-        <td><%= link_to 'Show', report %></td>
-        <td><%= link_to 'Edit', edit_report_path(report) %></td>
-        <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <!-- Bootstrap Core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="css/3-col-portfolio.css" rel="stylesheet">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+ <![endif]-->
+</head>
+
+<body>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Reports
+        </h1>
+    </div>
+</div>
+        <!-- /.row -->
+
+<!-- Projects Row -->
+<div class="row">
+  <% @reports.each do |report| %>
+    <div class="col-md-4 portfolio-item">
+          <a href="#">
+              <%= image_tag report.image.url(:thumb) %>
+          </a>
+          <h3>
+            <a href="#">Name</a>
+          </h3>
+
+          <h6>Submitted <%= time_ago_in_words(report.updated_at) %> ago by <%= report.user.email %>
+          </h6>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae</p>
+
+          <tr>
+            <td><%= link_to 'Show', report %></td>
+            <td><%= link_to 'Edit', edit_report_path(report) %></td>
+            <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+    </div>
+  <% end %>
+</div>
+
+<hr>
+
+<!-- Pagination -->
+<div class="row text-center">
+    <div class="col-lg-12">
+        <ul class="pagination">
+            <li>
+                <a href="#">&laquo;</a>
+            </li>
+            <li class="active">
+                <a href="#">1</a>
+            </li>
+            <li>
+                <a href="#">2</a>
+            </li>
+            <li>
+                <a href="#">3</a>
+            </li>
+            <li>
+                <a href="#">4</a>
+            </li>
+            <li>
+                <a href="#">5</a>
+            </li>
+            <li>
+                <a href="#">&raquo;</a>
+            </li>
+        </ul>
+    </div>
+</div>
+<!-- /.row -->
+
+<hr>
+
+<!-- Footer -->
+<footer>
+    <div class="row">
+        <div class="col-lg-12">
+            <p>Copyright &copy; Your Website 2014</p>
+        </div>
+    </div>
+    <!-- /.row -->
+</footer>
+
+</div>
+<!-- /.container -->
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
