add bootstrap theme to index and make clickable image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
 	<header class="navbar navbar-default" role="navigation">
     <div class="navbar-inner">
       <div class="container">
-        <div id="logo"><%= link_to "Rapid Report", root_path %></div>
+        <div id="logo"><%= link_to "Rapid Report", root_path %>
+        </div>
 
           <nav class="nav navbar-nav navbar-right pull-right">
-
           	<% if user_signed_in? %>
               <li class="profile-pic"><%= image_tag avatar_url(current_user), class:"img-circle" %></li>
                 <li class="dropdown">
@@ -37,9 +37,9 @@
   						</ul>
   					<% end %>
           </nav>
-        </div>
       </div>
-    </header>
+    </div>
+  </header>
 
   	<div id="main_content" class="container">
   		<% flash.each do |name, msg| %>
@@ -49,7 +49,7 @@
 			<div id="content" class="col-md-9 center-block">
 				<%= yield %>
 			</div>
-		</div>
 	</div>
+
 </body>
 </html>
