--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,17 +28,17 @@ $navbar-default-bg: grey;
     padding-top: 5px;
 
     a {
-      color: pink;
+      color: white;
     }
   }
 
+
 /*Index pics*/
-
-
 .portfolio-item {
-  margin-bottom: 25px;
+    margin-bottom: 35px;
 }
 
+
 footer {
-    margin: 50px 0;
+    margin: 30px 0;
 }
