--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -48,15 +48,21 @@
             <div class="col-md-4 portfolio-item">
                 <a href="<%= report_url(report) %>"><%= image_tag report.image.url(:medium)%></a>
                 <h3>
-                    <a href="#">Project Name</a>
+                    <a href="<%=report_url(report)%>">
+                      <%= report.last_name + " " + report.first_name %>
+                    </a>
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
                 <h6>Submitted <%= time_ago_in_words(report.updated_at) %> ago by <%= report.user.email %></h6>
+
+              <div class="options">
                 <tr>
                   <td><%= link_to 'Show', report %></td>
                   <td><%= link_to 'Edit', edit_report_path(report) %></td>
                   <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
                 </tr>
+              </div>
+
             </div>
           <% end %>
         </div>
