--- a/app/assets/stylesheets/css/3-col-portfolio.css
+++ b/app/assets/stylesheets/css/3-col-portfolio.css
@@ -7,10 +7,18 @@
 body {
 }
 
+
 #row .portfolio-item {
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+}
+
+.text-center {
+  text-align: center;
+}
+.options {
+  margin-bottom: 25px;
 }
 
 footer {
-    margin: 50px 0;
+    margin: 25px 0;
 }
