--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -36,7 +36,7 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">CEF Children's Reports
+                <h1 class="page-header">
                 </h1>
             </div>
         </div>
@@ -45,7 +45,7 @@
         <!-- Projects Row -->
         <div class="row">
           <% @reports.each do |report| %>
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-4 portfolio-item text-center">
                 <a href="<%= report_url(report) %>"><%= image_tag report.image.url(:medium)%></a>
                 <h3>
                     <a href="<%=report_url(report)%>">
@@ -61,7 +61,6 @@
                   <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
                 </tr>
               </div>
-
             </div>
           <% end %>
         </div>
@@ -105,7 +104,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Rapid Report App 2016</p>
                 </div>
             </div>
             <!-- /.row -->
