--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -36,7 +36,7 @@
         <!-- Page Header -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">
+                <h1 class="page-header"> Reports
                 </h1>
             </div>
         </div>
