make search bar functional

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,23 +16,15 @@
         <div id="logo"><%= link_to "Rapid Report", root_path %>
         </div>
 
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <%= form_tag reports_path, :method => 'get', class: 'input-group'  do %>
+              <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: 'Search for...' %>          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+          <% end %>
+        </div>
+      </form>
 
-          <nav class="nav navbar-search">
-            <div class="row">
-              <div class="search-box">
-                <%= form_tag(reports_path, :method => "get", id: "search-form") do %>
-                  <%= text_field_tag :search, params[:search], placeholder: "Search Reports" %>
-                  <%= submit_tag "Search", :name => nil %>
-                <% end %>
-
-                <% if @reports.present? %>
-                  <%= render @reports %>
-                <% else %>
-                  <p>There are no posts containing the term(s) <%= params[:search] %>.</p>
-                <% end %>
-              </div>
-            </div>
-          </nav>
 
           <nav class="nav navbar-nav navbar-right pull-right">
           	<% if user_signed_in? %>
