--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -9,16 +9,16 @@
   </p>
 </div>
 
+<div >
+  <p><strong>Date of Birth:</strong>
+  <%= @report.birthday.strftime("%d/%b/%Y") %>
+  </p>
+</div>
+
 <div>
   <p>
     <strong>Summary:</strong>
     <%= @report.summary %>
-  </p>
-</div>
-
-<div >
-  <p><strong>DOB:</strong>
-  <%= @report.birthday %>
   </p>
 </div>
 
