add phone number and contact person

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -36,6 +36,15 @@
   </div>
 
   <div class="field">
+    <%= f.label :phone_numbers %><br />
+    <%= f.text_field :phone1, placeholder: 'phone number 1' %>
+    <%= f.text_field :relation1, placeholder: 'relation' %> <br />
+    <%= f.text_field :phone2, placeholder: 'phone number 2' %>
+    <%= f.text_field :relation2, placeholder: 'relation' %> <br />
+  </div>
+
+
+  <div class="field">
     <%= f.label :summary %><br>
     <%= f.text_area :summary %>
   </div>
