--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -20,6 +20,23 @@
     <%= @report.line1 %>
     <%= @report.line2 %>
     <%= @report.province %>
+  </p>
+</div>
+
+<div>
+  <p>
+    <strong>Primary phone number:</strong>
+      <%= @report.phone1 %>
+    <strong>Contact person</strong>
+      <%= @report.relation1 %>
+  </p>
+
+  <p>
+  <strong>Secondary phone number:</strong>
+    <%= @report.phone2 %>
+    <strong>Contact person</strong>    
+    <%= @report.relation2 %>
+  </p>
 </div>
 
 <div>
