--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -40,8 +40,7 @@
 </div>
 
 <div id='report-chart'>
-  <% data = {"Math"=>87, "Geography"=>100} %>
-  <%= column_chart data, min: 0, max: 100 %>
+  <%= column_chart @data, min: 0, max: 100 %>
 </div>
 
 <div>
