change seeds and color of bars in chart

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -40,7 +40,7 @@
 </div>
 
 <div id='report-chart'>
-  <%= column_chart @data, min: 0, max: 100 %>
+  <%= column_chart @data, min: 0, max: 100, colors: ["pink"] %>
 </div>
 
 <div>
