--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -45,7 +45,7 @@
 
 <div class="field">
   <%= f.label :grades %>
-  <%= f.text_field :grades, placeholder: 'English 89, History 74' %>
+  <%= f.text_field :grades, placeholder: 'English 89, History 74, Vietnamese 96 etc...' %>
 </div>
 
   <div class="field">
