add seeds and add schoolname and class in show and form views

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -43,6 +43,12 @@
     <%= f.text_field :relation2, placeholder: 'relation' %> <br />
   </div>
 
+  <div class="field">
+    <%= f.label :school_information%><br>
+    <%= f.text_field :schoolname, placeholder: 'Nguyen Duy Hieu'%>
+    <%= f.text_field :schoolclass, placeholder: '3A'%>
+  </div>
+
 <div class="field">
   <%= f.label :grades %>
   <%= f.text_field :grades, placeholder: 'English 89, History 74, Vietnamese 96 etc...' %>
