fix start and end year for birthday selection

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -44,7 +44,7 @@
   <p>
   <strong>School information:</strong>
     <%= @report.schoolname %>
-  <strong>Class:<strong>
+  <strong>Class:</strong>
     <%= @report.schoolclass %>
   </p>
 </div>
