--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -25,7 +25,7 @@
 
   <div class="field">
     <%= f.label :birthday %><br />
-    <%= f.date_select :birthday, :include_blank => true, :start_year => Time.now.year - 30 %>
+    <%= f.date_select :birthday, :include_blank => true, :start_year => 1990, :end_year => Time.now.year %>
   </div>
 
   <div class="field">
