--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,65 +1,70 @@
-<%= form_for @report, html: { multipart: true } do |f| %>
-  <% if @report.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
 
-      <ul>
-      <% @report.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="row">
+  <div class="col-xs-12">
+    <%= form_for @report, html: { multipart: true } do |f| %>
+      <% if @report.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@report.errors.count, "error") %> prohibited this report from being saved:</h2>
+
+          <ul>
+          <% @report.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
+      <div class="field">
+        <%= f.label :image %><br>
+        <%= f.file_field :image %>
+      </div>
+      <div class="field">
+        <%= f.label :first_name %><br>
+        <%= f.text_field :first_name %>
+      </div>
+      <div class="field">
+        <%= f.label :last_name %><br>
+        <%= f.text_field :last_name %>
+      </div>
+
+      <div class="field">
+        <%= f.label :birthday %><br />
+        <%= f.date_select :birthday, :include_blank => true, :start_year => 1990, :end_year => Time.now.year %>
+      </div>
+
+      <div class="field">
+        <%= f.label :address %><br />
+        <%= f.text_field :line1, placeholder: 'address line 1' %> <br />
+        <%= f.text_field :line2, placeholder: 'address line 2' %> <br />
+        <%= f.text_field :province, placeholder: 'province' %>
+      </div>
+
+      <div class="field">
+        <%= f.label :phone_numbers %><br />
+        <%= f.text_field :phone1, placeholder: 'phone number 1' %>
+        <%= f.text_field :relation1, placeholder: 'relation' %> <br />
+        <%= f.text_field :phone2, placeholder: 'phone number 2' %>
+        <%= f.text_field :relation2, placeholder: 'relation' %> <br />
+      </div>
+
+      <div class="field">
+        <%= f.label :school_information%><br>
+        <%= f.text_field :schoolname, placeholder: 'Nguyen Duy Hieu'%>
+        <%= f.text_field :schoolclass, placeholder: '3A'%>
+      </div>
+
+    <div class="field">
+      <%= f.label :grades %>
+      <%= f.text_field :grades, placeholder: 'English 89, History 74, Vietnamese 96 etc...' %>
     </div>
-  <% end %>
-  <div class="field">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
-  </div>
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </div>
 
-  <div class="field">
-    <%= f.label :birthday %><br />
-    <%= f.date_select :birthday, :include_blank => true, :start_year => 1990, :end_year => Time.now.year %>
-  </div>
+      <div class="field">
+        <%= f.label :summary %><br>
+        <%= f.text_area :summary %>
+      </div>
 
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :line1, placeholder: 'address line 1' %> <br />
-    <%= f.text_field :line2, placeholder: 'address line 2' %> <br />
-    <%= f.text_field :province, placeholder: 'province' %>
+      <div class="actions">
+        <%= f.submit %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :phone_numbers %><br />
-    <%= f.text_field :phone1, placeholder: 'phone number 1' %>
-    <%= f.text_field :relation1, placeholder: 'relation' %> <br />
-    <%= f.text_field :phone2, placeholder: 'phone number 2' %>
-    <%= f.text_field :relation2, placeholder: 'relation' %> <br />
-  </div>
-
-  <div class="field">
-    <%= f.label :school_information%><br>
-    <%= f.text_field :schoolname, placeholder: 'Nguyen Duy Hieu'%>
-    <%= f.text_field :schoolclass, placeholder: '3A'%>
-  </div>
-
-<div class="field">
-  <%= f.label :grades %>
-  <%= f.text_field :grades, placeholder: 'English 89, History 74, Vietnamese 96 etc...' %>
 </div>
-
-  <div class="field">
-    <%= f.label :summary %><br>
-    <%= f.text_area :summary %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
